2007-02-02  Amitabha Roy  <amitabha.roy@gmail.com>

	* daemon/opd_anon.c:
	* daemon/opd_anon.h:
	* daemon/opd_mangling.c:
	* libop/op_mangle.c:
	* libop/op_mangle.h:
	* libpp/parse_filename.cpp: save and report name of anonymous
	  mapping if there is one (as self-contradictory as that
	  sounds).

2007-02-02  Dave Nomura <dcnltc@us.ibm.com>

	* events/Makefile.am:
	* events/ppc64/970MP/event_mappings:
	* events/ppc64/970MP/events:
	* events/ppc64/970MP/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/ophelp.c: PPC970MP has different hardware counters than the rest
	  of the PPC family and must be treated as a different architecture
	  by oprofile.

2007-01-31  Dave Nomura <dcnltc@us.ibm.com>

	* libpp/xml_utils.cpp: opreport -X was still getting some incorrect 
	  symbols attributed to the <binary> when processing a --separate=lib
	  profile.
	  
2007-01-29  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/oprofiled.c: no need for 0755 for the log file mode, use 0644
	* utils/opcontrol: don't create the log in opcontrol

2007-01-26  Dave Nomura <dcnltc@us.ibm.com>

	* libpp/format_output.cpp:
	* libpp/xml_utils.cpp: opreport -X was mixing the symbols associated with
	  an application with those of a library when processing a --separate=lib
	  profile.

2007-01-02  Dave Nomura <dcnltc@us.ibm.com>

	* events/Makefile.am:
	* events/ppc64/power6/event_mappings:
	* events/ppc64/power6/events:
	* events/ppc64/power6/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/opcontrol:
	* utils/ophelp.c:  Add support for Power6


	* doc/oprofile.xml:
	* events/Makefile.am:
	* events/ppc64/cell-be/events:
	* events/ppc64/cell-be/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/opcontrol:
	* utils/ophelp.c Add support for Cell Broadband Engine

See ChangeLog-2006 for earlier changelogs.